docs: Setup MkDocs with Material theme for GitHub Pages
Added:
- mkdocs.yml: MkDocs configuration with Material theme, navigation structure, mermaid support
- docs/index.md: Homepage with framework overview and quick start
- .github/workflows/docs.yml: GitHub Actions workflow for auto-deployment

Changed:
- .gitignore: Added site/ directory (MkDocs build output)
- pyproject.toml: Added mkdocs-material and pymdown-extensions as dev dependencies

Features:
- Light/dark mode toggle
- Code syntax highlighting with copy buttons
- Mermaid diagram support for graph visualizations
- Search with suggestions
- Mobile-responsive Material Design theme
- Auto-deploy to GitHub Pages on push to main

--- a/.gitignore
+++ b/.gitignore
@@ -59,13 +59,16 @@ Thumbs.db
 
 # Misc
 .archive/
-.github/
 .analysis/
 .plans/
 examples/*.ipynb
 scripts/
 /config.py
 experiments/
+.github/copilot-instructions.md
+
+# MkDocs
+site/
 
 # Notebook-generated artifacts
 examples/data/pdf_output/notebook-*.html
@@ -77,3 +80,4 @@ examples/data/pdf_output/pdf_vision_showcase/
 task.md
 implementation_plan.md
 tests/.env
+
