--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,8 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs-material
-          pip install pymdown-extensions
+          pip install mkdocs-material pymdown-extensions
 
       - name: Deploy documentation
         run: mkdocs gh-deploy --force
