feat(knowledge-graph): add three-level visualization API and remove redundant title
- Add kg.mermaid() low-level API for raw Mermaid code
- Add kg.render(format) medium-level API for multiple formats
- Add kg.display() high-level API for Jupyter inline rendering
- Remove redundant title from HTML wrapper in to_html()
- Update kg_agent_viz.py example with latest API
- Update documentation for visualization APIs
- Bump version to 0.6.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "agenticflow"
-version = "1.8.3"
+version = "1.8.4"
 description = "A production-grade multi-agent framework for building AI applications"
 readme = "README.md"
 license = { text = "MIT" }
@@ -86,6 +86,7 @@ dev = [
     "mkdocs-material>=9.7.1",
     "pymdown-extensions>=10.20",
     "mkdocs-redirects>=1.2.2",
+    "ipykernel>=7.1.0",
 ]
 
 [project.scripts]
