docs: enhance role system documentation and examples
- Enhanced docs/agent.md with comprehensive role system explanation
  - Added 'When to Use' column to capabilities table
  - Explained capability controls + system prompt injection
  - Provided real examples showing behavior differences
  - Added use case scenarios for each role type
  - Referenced new role_behavior.py example

- Created examples/basics/role_behavior.py
  - Demonstrates how roles actually affect LLM behavior
  - Shows system prompts injected for each role
  - Real LLM responses showing worker vs autonomous behavior
  - Supervisor delegation demonstration
  - Tool access control by role
  - Replaces abstract role_configs.py with practical examples

- Enhanced examples/basics/memory.py
  - Added memory key discovery demo
  - Shows search_memories() for fuzzy key discovery
  - Demonstrates recall() for exact key access
  - Updated docstring explaining discovery pattern

- Created examples/models.py
  - Lightweight 68-line replacement for 611-line config.py
  - Supports YAML configuration (models.yaml)
  - Priority: YAML  env vars  defaults
  - Backward compatible with old examples

- Updated .gitignore
  - Added .env, *.env, examples/models.yaml to protect API keys
  - Kept .env.example for templates

- Mass updated all examples to use models.py instead of config.py
  - Simplified imports across 50+ example files
  - Removed deprecated config.py and related files

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,12 @@ scripts/
 experiments/
 .github/copilot-instructions.md
 
+# Configuration files with API keys
+.env
+*.env
+!.env.example
+examples/models.yaml
+
 # MkDocs
 site/
 
