test: enable 422 additional tests with optional dependencies
- Install optional test dependencies: faiss-cpu, qdrant-client, sqlalchemy,
  aiosqlite, psycopg2-binary, redis, rank-bm25, sentence-transformers, beautifulsoup4
- Delete obsolete test_extract_html_regex (functionality merged)
- Fix BM25Retriever test API calls (k parameter placement, remove invalid tokenizer)
- Enhance FAISS backend filter matching to support custom metadata fields
- Fix Qdrant backend tests (remove invalid location parameter, use dimension)
- Implement streaming error handling test with proper mock
- Remove skip decorator from test_parent_retriever_with_scores

Test coverage: 1503 → 1925 tests (+422 tests, +28%)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,13 @@ dev = [
     "pymdown-extensions>=10.20",
     "mkdocs-redirects>=1.2.2",
     "ipykernel>=7.1.0",
+    "faiss-cpu>=1.13.2",
+    "qdrant-client>=1.16.2",
+    "psycopg2-binary>=2.9.11",
+    "redis>=7.1.0",
+    "rank-bm25>=0.2.2",
+    "sentence-transformers>=5.2.0",
+    "beautifulsoup4>=4.14.2",
 ]
 
 [project.scripts]
