--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "azure-ai-inference>=1.0.0b9",
     "google-genai>=1.57.0",
     "openai>=1.0.0",
+    "pymupdf>=1.26.6",
 ]
 
 [project.optional-dependencies]
