feat: complete Phase 4 tool ecosystem enhancement
Add 4 essential capabilities (HTTPClient, Database, APITester, DataValidator), tool composition guide with 6 patterns, testing framework with 11 examples, and executor behavior clarification. All demos working with LLM integration.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
       - Core: core.md
       - Models: models.md
       - Tools: tools.md
+      - Tool Composition: tool-composition.md
       - Context: context.md
       - Executors: executors.md
   - Multi-Agent:
@@ -97,6 +98,7 @@ nav:
       - Streaming: streaming.md
       - Transport: transport.md
       - Observability: observability.md
+      - Testing: testing.md
 
 extra:
   social:
