--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ dependencies = [
     "google-genai>=1.57.0",
     "openai>=1.0.0",
     "pymupdf>=1.26.6",
+    "anthropic>=0.75.0",
+    "ddgs>=9.9.1",
+    "sqlalchemy>=2.0.44",
+    "aiosqlite>=0.21.0",
+    "greenlet>=3.2.4",
 ]
 
 [project.optional-dependencies]
@@ -94,6 +99,9 @@ benchmark = ["crewai>=1.6.0", "openai-agents>=0.6.1"]
 dev = [
     "ruff>=0.7.0",
     "mypy>=1.13.0",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
 ]
 
 # --- Testing Tools ---
