--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,8 @@ nav:
       - VectorStore: vectorstore.md
       - Document Processing: document.md
       - Memory: memory.md
+      - ACC Memory Control: acc.md
+      - Semantic Caching: caching.md
   - Advanced:
       - Events: events.md
       - Interceptors: interceptors.md
@@ -98,6 +100,7 @@ nav:
       - Streaming: streaming.md
       - Transport: transport.md
       - Observability: observability.md
+      - Testing: testing.md
       - Testing: testing.md
 
 extra:
