docs: add tool-building guide
- Create comprehensive tool-building guide (docs/tool-building.md)
  * @tool decorator usage and automatic schema generation
  * Async tool patterns for I/O operations
  * Error handling and resilience patterns
  * Real examples from 8+ production capabilities
  * HTTPClient, Database, APITester, DataValidator examples
  * Tool composition, context injection, testing
  * Best practices and common pitfalls
  * Production-ready patterns (retries, rate limiting, caching)

- Update mkdocs.yml to include tool-building guide

Phase 5: 80% complete (4/5 guides done)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
       - Core: core.md
       - Models: models.md
       - Tools: tools.md
+      - Building Tools: tool-building.md
       - Tool Composition: tool-composition.md
       - Context: context.md
       - Executors: executors.md
