refactor: rename AgenticFlow → Cogent across entire codebase
- Replace all AgenticFlow/agenticflow mentions with Cogent/cogent
- Update docstrings, comments, CLI, config paths
- Update test mocks and patches
- Remove transport.md (documented non-existent features)
- 65 files changed

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,6 @@ nav:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/milad-o/agenticflow
+      link: https://github.com/milad-o/cogent
   version:
     provider: mike
