feat(models): add Cerebras provider for ultra-fast inference
- Add CerebrasChat model with sync/async/streaming support
- Add cerebras-cloud-sdk dependency
- Add CEREBRAS_API_KEY to config env vars
- Add cerebras model aliases and provider patterns in registry
- Export CerebrasChat in models __init__

Available models: llama3.1-8b, llama-3.3-70b, qwen-3-32b, gpt-oss-120b

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "rapidfuzz>=3.14.3",
     "rank-bm25>=0.2.2",
+    "cerebras-cloud-sdk>=1.64.1",
 ]
 
 [project.optional-dependencies]
