--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ dependencies = [
     "starlette>=0.50.0",
     "uvicorn>=0.38.0",
     "faiss-cpu>=1.13.2",
+    "scipy>=1.17.0",
+    "asyncpg>=0.31.0",
 ]
 
 [project.optional-dependencies]
