--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "faiss-cpu>=1.13.2",
     "scipy>=1.17.0",
     "asyncpg>=0.31.0",
+    "pyvis>=0.3.2",
 ]
 
 [project.optional-dependencies]
