feat(viz): add publication-quality iplotx renderer with multiple layouts
- Add to_iplotx() renderer for publication-quality matplotlib plots
- Support 4 layout types: hierarchical, radial, clustered, force
- Generate PDF, PNG @300dpi, and SVG formats
- Add KnowledgeGraph.plot() convenience method
- Organize all KG outputs to kg_outputs/ directory (Mermaid, PyVis, iplotx)
- Add iplotx dependency and required packages (matplotlib, pandas)
- Configure optimal visualization parameters (node size 120, spacing, colors)
- Update .gitignore to exclude kg_outputs/

Fixes visualization quality issues with proper node sizing and spacing.

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ examples/data/pdf_output/notebook-*.html
 examples/data/pdf_output/notebook_pdf_html_pages/
 examples/data/pdf_output/pdf_vision_showcase/
 
+# Knowledge graph outputs
+examples/capabilities/kg_outputs/
+
 # Agent
 .agent/
 task.md
