--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "scipy>=1.17.0",
     "asyncpg>=0.31.0",
     "pyvis>=0.3.2",
+    "iplotx>=1.7.0",
 ]
 
 [project.optional-dependencies]
