feat(viz): add gravis interactive 2D/3D web visualization
- Add gravis dependency for pure Python interactive viz
- Implement to_gravis() renderer with d3/vis/three.js support
- Add KnowledgeGraph.visualize() and visualize_3d() methods
- Create comprehensive visualization_demo.py showing all 6 formats
- Fix gravis API parameter names (show_node_label vs show_node_labels)
- Support 2D (d3, vis) and 3D (three) rendering modes
- Exports: HTML, SVG (2D), PNG/JPG (requires Selenium)

Pure Python stack now includes: PyVis, iplotx, gravis
No system dependencies required for complete viz capabilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "asyncpg>=0.31.0",
     "pyvis>=0.3.2",
     "iplotx>=1.7.0",
+    "gravis>=0.1.0",
 ]
 
 [project.optional-dependencies]
@@ -154,6 +155,11 @@ docs = [
     "mkdocs-material>=9.7.1",
     "mkdocs-redirects>=1.2.2",
     "pymdown-extensions>=10.20",
+    "ipykernel>=7.1.0",
+]
+
+# --- Notebook Tools ---
+notebook = [
     "ipykernel>=7.1.0",
 ]
 
