chore: migrate to Python 3.13+, fix tests, add CI badges
- Drop requires-python from >=3.14 to >=3.13; update mypy, badge, comment
- Fix 46 failing tests: remove stale graphviz/graphml/cytoscape/json-graph
  visualization tests (APIs no longer exist), align KG tool names to
  kg_remember/kg_recall/kg_connect/kg_query/kg_forget/kg_list, fix
  SQLiteGraph.test_clear missing entity prerequisite
- Add .github/workflows/tests.yml: runs pytest + coverage, writes
  badges/tests.svg and badges/coverage.svg via genbadge, auto-commits
- Add genbadge[tests,coverage] dev dependency
- Commit initial badges/tests.svg (1321 passed) + badges/coverage.svg
- Update README: python-3.13+, live CI status + tests + coverage badges

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,7 @@ TASKBOARD.md
 ARCHITECTURE.md
 RESEARCH.md
 
+# Notebooks
+notebooks/
+# CI reports (ephemeral - generated in CI, not committed)
+reports/
