--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.17.0"
 description = "Production AI agent framework with memory control and semantic caching"
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 authors = [{ name = "Milad Olad" }]
 keywords = ["agents", "ai", "llm", "memory", "caching", "reasoning", "tools"]
 classifiers = [
@@ -12,7 +12,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: 3.14",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Typing :: Typed",
@@ -122,6 +121,7 @@ dev = [
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
+    "genbadge[coverage,tests]>=1.1.3",
 ]
 
 # --- Testing Tools ---
@@ -192,7 +192,7 @@ ignore = ["E501"]
 known-first-party = ["cogent"]
 
 [tool.mypy]
-python_version = "3.14"
+python_version = "3.13"
 strict = true
 warn_return_any = true
 warn_unused_ignores = true
