--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,42 +25,25 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.0.0",
     "structlog>=25.5.0",
-    # LLM providers (bundled for zero-config)
-    "azure-ai-inference>=1.0.0b9",
-    "google-genai>=1.57.0",
-    "openai>=1.0.0",
-    "pymupdf>=1.26.6",
-    "anthropic>=0.75.0",
-    "ddgs>=9.9.1",
-    "sqlalchemy>=2.0.44",
-    "aiosqlite>=0.21.0",
-    "greenlet>=3.2.4",
     "rapidfuzz>=3.14.3",
-    "rank-bm25>=0.2.2",
-    "cerebras-cloud-sdk>=1.64.1",
-    "cohere>=5.20.0",
-    "mcp>=1.22.0",
-    "websockets>=15.0.1",
-    "starlette>=0.50.0",
-    "uvicorn>=0.38.0",
-    "faiss-cpu>=1.13.2",
-    "scipy>=1.17.0",
-    "asyncpg>=0.31.0",
-    "pyvis>=0.3.2",
-    "gravis>=0.1.0",
+    # Default LLM provider
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
 # --- LLM Provider Extras ---
-anthropic = ["anthropic>=0.40.0"]
-azure = ["azure-identity>=1.25.1"]
+anthropic = ["anthropic>=0.75.0"]
+azure = ["azure-identity>=1.25.1", "azure-ai-inference>=1.0.0b9"]
+cerebras = ["cerebras-cloud-sdk>=1.64.1"]
 cohere = ["cohere>=5.20.0"]
+gemini = ["google-genai>=1.57.0"]
 groq = ["groq>=0.15.0"]
 
 # --- Vector Stores & Retrieval ---
 vector-stores = [
     "faiss-cpu>=1.13.2",
     "qdrant-client>=1.16.2",
+    "scipy>=1.17.0",
 ]
 retrieval = [
     "rank-bm25>=0.2.2",
@@ -71,6 +54,8 @@ retrieval = [
 database = [
     "sqlalchemy>=2.0.44",
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.31.0",
+    "greenlet>=3.2.4",
     "psycopg2-binary>=2.9.11",
 ]
 infrastructure = [
@@ -79,7 +64,7 @@ infrastructure = [
 
 # --- Capabilities ---
 analytics = ["pyarrow>=22.0.0"]
-api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
+api = ["fastapi>=0.115.0", "uvicorn>=0.38.0", "starlette>=0.50.0"]
 browser = ["playwright>=1.56.0"]
 document = [
     "pdfplumber>=0.11.8",
@@ -94,6 +79,8 @@ web = ["beautifulsoup4>=4.14.2", "ddgs>=9.9.1"]
 
 # --- Data Visualization & Analysis ---
 visualization = [
+    "pyvis>=0.3.2",
+    "gravis>=0.1.0",
     "matplotlib>=3.9.0",
     "seaborn>=0.13.0",
     "pandas>=2.2.0",
@@ -101,13 +88,13 @@ visualization = [
 
 # --- Bundles for Easy Installation ---
 all-providers = [
-    "cogent[anthropic,azure,cohere,groq]",
+    "cogent[anthropic,azure,cerebras,cohere,gemini,groq]",
 ]
 all-backend = [
     "cogent[vector-stores,retrieval,database,infrastructure]",
 ]
 all = [
-    "cogent[all-providers,all-backend,analytics,api,browser,document,mcp,web]",
+    "cogent[all-providers,all-backend,analytics,api,browser,document,mcp,web,visualization]",
 ]
 
 # --- Benchmarking (comparisons only, not for production) ---
