chore: rename to cogent-ai, fix CI, remove benchmark extra
- Rename package cogent → cogent-ai for PyPI
- Update all install commands in README and docs to use PyPI name
- Fix dev install commands to use uv sync --group syntax
- Fix CI: pin Python 3.13 via setup-uv python-version option
- Remove benchmark extra (crewai/openai-agents) from pyproject.toml
  - Was pulling in chromadb → pypika==0.48.9 which fails on Python 3.12+
    (ast.Str removed), breaking CI
  - Also removes 60+ transitive deps from the lock file
- Regenerate uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cogent"
+name = "cogent-ai"
 version = "1.17.0"
 description = "Production AI agent framework with memory control and semantic caching"
 readme = "README.md"
@@ -88,17 +88,14 @@ visualization = [
 
 # --- Bundles for Easy Installation ---
 all-providers = [
-    "cogent[anthropic,azure,cerebras,cohere,gemini,groq]",
+    "cogent-ai[anthropic,azure,cerebras,cohere,gemini,groq]",
 ]
 all-backend = [
-    "cogent[vector-stores,retrieval,database,infrastructure]",
+    "cogent-ai[vector-stores,retrieval,database,infrastructure]",
 ]
 all = [
-    "cogent[all-providers,all-backend,analytics,api,browser,document,mcp,web,visualization]",
+    "cogent-ai[all-providers,all-backend,analytics,api,browser,document,mcp,web,visualization]",
 ]
-
-# --- Benchmarking (comparisons only, not for production) ---
-benchmark = ["crewai>=1.6.0", "openai-agents>=0.6.1"]
 
 [dependency-groups]
 # --- Core Development Tools ---
