--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,9 +17,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: "latest"
-
-      - name: Set up Python 3.13
-        run: uv python install 3.13
+          python-version: "3.13"
 
       - name: Install dependencies
         run: uv sync --group dev
