fix(ci): skip coverage badge if coverage.xml not generated

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,9 @@ jobs:
         run: |
           mkdir -p badges
           uv run genbadge tests -i reports/junit.xml -o badges/tests.svg
-          uv run genbadge coverage -i reports/coverage.xml -o badges/coverage.svg
+          if [ -f reports/coverage.xml ]; then
+            uv run genbadge coverage -i reports/coverage.xml -o badges/coverage.svg
+          fi
 
       - name: Commit badges
         uses: stefanzweifel/git-auto-commit-action@v5
