chore(ci): drop coverage badge and pytest-cov
Coverage % gives no user-facing value; keep only tests pass/fail badge.
Removes pytest-cov, genbadge[coverage], and --cov flags from CI.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,19 +27,13 @@ jobs:
         run: |
           mkdir -p reports
           uv run pytest \
-            --junitxml=reports/junit.xml \
-            --cov=src/cogent \
-            --cov-report=xml:reports/coverage.xml \
-            --cov-report=term-missing
+            --junitxml=reports/junit.xml
         continue-on-error: true  # always generate badges even on failure
 
       - name: Generate badges
         run: |
           mkdir -p badges
           uv run genbadge tests -i reports/junit.xml -o badges/tests.svg
-          if [ -f reports/coverage.xml ]; then
-            uv run genbadge coverage -i reports/coverage.xml -o badges/coverage.svg
-          fi
 
       - name: Commit badges
         uses: stefanzweifel/git-auto-commit-action@v5
