--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,15 +104,13 @@ dev = [
     "mypy>=1.13.0",
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
-    "pytest-cov>=7.0.0",
-    "genbadge[coverage,tests]>=1.1.3",
+    "genbadge[tests]>=1.1.3",
 ]
 
 # --- Testing Tools ---
 test = [
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
-    "pytest-cov>=5.0.0",
 ]
 
 # --- Backend/Infrastructure Tests (optional dependencies for testing) ---
